<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/login_backround"
    tools:context=".Login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_margin="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/info"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp"
                    android:layout_marginTop="50dp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"
                    android:layout_marginTop="100dp"
                    android:text="@string/masuk"/>


                <EditText
                    android:id="@+id/textEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_email"
                    android:layout_marginTop="25dp"
                    android:inputType="textEmailAddress"
                    android:drawablePadding="15dp"
                    android:drawableLeft="@drawable/email"/>

                <EditText
                    android:id="@+id/textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_kata_sandi"
                    android:inputType="textPassword"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/pass"
                    android:drawablePadding="15dp"/>


                <Button
                    android:id="@+id/masuk"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/tombol"
                    android:text="@string/masuk"
                    android:elevation="5dp"
                    android:textColor="@android:color/white" />

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>


                <TextView
                    android:id="@+id/daftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/belum_punya_akun_buat_akun"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:layout_marginTop="25dp"/>



        </LinearLayout>

</LinearLayout>